force-app/main/default/objects/pi__LDFilter__c/pi__LDFilter__c.object-meta.xml
<CustomObject>
    <description>Lead Deck Filter object to house criteria</description>
    <label>Lead Deck Filter</label>
    <nameField>
        <label>lead deck filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Deck Filters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>