force-app/main/default/objects/pi__LDFilter__c/fields/pi__assignedToAllUsers__c.field-meta.xml
<CustomField>
    <fullName>pi__assignedToAllUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field for determining if the &quot;all&quot; tag should be true in Cassandra</description>
    <label>Assigned to All Users</label>
    <type>Checkbox</type>
</CustomField>