force-app/main/default/objects/pi__LDFilter__c/fields/pi__criteriaHash__c.field-meta.xml
<CustomField>
    <fullName>pi__criteriaHash__c</fullName>
    <description>hash of the criteria array in a LDFilter</description>
    <externalId>true</externalId>
    <label>Criteria Hash</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>