force-app/main/default/objects/pi__LDFilter__c/fields/pi__defaultFilter__c.field-meta.xml
<CustomField>
    <fullName>pi__defaultFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean to determine whether this is this a default filter</description>
    <inlineHelpText>boolean to determine whether this is this a default filter</inlineHelpText>
    <label>Default Filter</label>
    <type>Checkbox</type>
</CustomField>