force-app/main/default/objects/pi__LDFilter__c/fields/pi__displayMode__c.field-meta.xml
<CustomField>
    <fullName>pi__displayMode__c</fullName>
    <description>the mode of the card to determine what should be displayed as the source of the card</description>
    <inlineHelpText>the mode of the card to determine what should be displayed as the source of the card</inlineHelpText>
    <label>Display Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>