force-app/main/default/objects/pi__LDFilter__c/fields/pi__metadata__c.field-meta.xml
<CustomField>
    <fullName>pi__metadata__c</fullName>
    <description>field to store filter metadata</description>
    <label>Metadata</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>