force-app/main/default/objects/pi__LDFilter__c/fields/pi__pardotOwnerId__c.field-meta.xml
<CustomField>
    <fullName>pi__pardotOwnerId__c</fullName>
    <description>Field for the corresponding pardot user</description>
    <label>Pardot Owner ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>