force-app/main/default/objects/pi__LDFilter__c/fields/pi__showNotifications__c.field-meta.xml
<CustomField>
    <fullName>pi__showNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean to determine whether notifications should be shown on the desktop version</description>
    <inlineHelpText>boolean to determine whether notifications should be shown on the desktop version</inlineHelpText>
    <label>Show Notifications</label>
    <type>Checkbox</type>
</CustomField>