force-app/main/default/objects/pi__LDFilter__c/fields/pi__title__c.field-meta.xml
<CustomField>
    <fullName>pi__title__c</fullName>
    <description>title of the filter</description>
    <inlineHelpText>title of the filter</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>