force-app/main/default/objects/pi__LDFilter__c/fields/pi__version__c.field-meta.xml
<CustomField>
    <fullName>pi__version__c</fullName>
    <description>Version number to track version of filter</description>
    <label>Filter Version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>