force-app/main/default/objects/pi__LDFilter__c/listViews/pi__All.listView-meta.xml
<ListView>
    <fullName>pi__All</fullName>
    <columns>pi__title__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>pi__criteriaHash__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>